# Shopify-GraphQL-and-C-

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  launch.vs.json
server_mock/: README.md  index.js  package-lock.json  package.json
src/: graphql_client.cpp  graphql_client.hpp  main.cpp  mapping.cpp  mapping.hpp  models.hpp  pagination.cpp  pagination.hpp  queries.hpp  throttle.cpp  throttle.hpp  util.cpp  util.hpp
tests/: test_integration.cpp  test_mapping.cpp  test_throttle.cpp  test_util.cpp
